--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -67,7 +67,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/price_text_view"
                 android:layout_marginTop="6dp"
-                android:text="Buy" />
+                android:text="Buy"
+                android:focusable="false"/>
 
             <TextView
                 android:id="@+id/item_quantity"
