add logic to the sell button

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -63,12 +63,12 @@
                 android:text="In Stock" />
 
             <Button
-                android:id="@+id/buy_button"
+                android:id="@+id/sell_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/price_text_view"
                 android:layout_marginTop="6dp"
-                android:text="Buy"
+                android:text="Sell"
                 android:focusable="false"/>
 
             <TextView
