--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -24,65 +24,108 @@
             android:id="@+id/item_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textStyle="bold"
             android:layout_gravity="top"
+            android:textColor="@color/color_darkGray"
+            android:layout_marginBottom="6dp"
             android:textAppearance="?android:textAppearanceMedium"
-            tools:text="NAME OF THE ITEM" />
+            tools:text="@string/detail_activity_hint_name" />
 
         <TextView
             android:id="@+id/item_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textColor="@color/color_gray"
             android:textAppearance="?android:textAppearanceSmall"
-            tools:text="TYPE" />
+            tools:text="@string/spinner_other" />
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom">
+            android:orientation="horizontal"
+            android:layout_gravity="center_vertical">
 
-            <TextView
-                android:id="@+id/price_text_view"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:gravity="start"
-                android:text="Price: EUR" />
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/item_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/price_text_view"
-                android:paddingLeft="6dp"
-                tools:text="30" />
+                <TextView
+                    android:id="@+id/price_text_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/color_darkGray"
+                    android:layout_marginRight="6dp"
+                    android:gravity="start"
+                    android:text="@string/detail_activity_item_price" />
 
-            <TextView
-                android:id="@+id/item_in_stock"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:text="In Stock" />
+                <TextView
+                    android:id="@+id/item_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/color_darkGray"
+                    android:paddingLeft="6dp"
+                    tools:text="30" />
 
-            <Button
-                android:id="@+id/sell_button"
-                android:layout_width="wrap_content"
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/price_text_view"
-                android:layout_marginTop="6dp"
-                android:text="Sell"
-                android:focusable="false"/>
+                android:gravity="end"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/item_in_stock"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:layout_alignParentRight="true"
+                    tools:text="@string/in_stock" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:layout_marginTop="6dp">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="3"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/sell_button"
+                    style="@style/AppTheme.ButtonStyle"
+                    android:layout_marginRight="50dp"
+                    android:text="@string/sell_button"
+                    android:focusable="false"/>
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/item_quantity"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_below="@+id/item_in_stock"
-                android:layout_marginTop="6dp"
-                android:background="@color/colorAccent"
+                android:gravity="end"
+                android:background="@color/color_lightGray"
                 android:padding="10dp"
+                android:layout_marginLeft="30dp"
                 tools:text="15" />
 
-        </RelativeLayout>
+        </LinearLayout>
 
     </LinearLayout>
 
