--- a/app/src/main/res/menu/menu_detail.xml
+++ b/app/src/main/res/menu/menu_detail.xml
@@ -8,7 +8,8 @@
     <item
         android:id="@+id/action_save"
         android:title="@string/action_save"
-        app:showAsAction="never" />
+        android:icon="@drawable/ic_action_check"
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/action_delete"
